[gd_scene load_steps=12 format=3 uid="uid://c5lkh2jiblpud"]

[ext_resource type="Script" path="res://Scripts/anger_enemy.gd" id="1_hwdxi"]
[ext_resource type="Texture2D" uid="uid://bfu06vfrhcf2v" path="res://Art/mindefense1.png" id="2_kjhfw"]
[ext_resource type="Script" path="res://Scripts/HealthBar.gd" id="3_5oddd"]
[ext_resource type="AudioStream" uid="uid://caa6xgwphe7cj" path="res://Sound/anger_death.wav" id="4_uy5r6"]
[ext_resource type="AudioStream" uid="uid://84clhngy0uxp" path="res://Sound/anger_hit.wav" id="5_wpeso"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8tb5l"]
atlas = ExtResource("2_kjhfw")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvi21"]
atlas = ExtResource("2_kjhfw")
region = Rect2(80, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r50od"]
atlas = ExtResource("2_kjhfw")
region = Rect2(64, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obaqv"]
atlas = ExtResource("2_kjhfw")
region = Rect2(80, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u6m1n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tb5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvi21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r50od")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obaqv")
}],
"loop": true,
"name": &"flying",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_vh72f"]
radius = 9.05539

[node name="AngerEnemy" type="Area2D" groups=["enemy"]]
z_index = 10
collision_mask = 0
script = ExtResource("1_hwdxi")
start_speed = 10
max_health = 100
health_height = 2
victory_multiplier = 5

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u6m1n")
animation = &"flying"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["enemy"]]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_vh72f")

[node name="HealthBar" type="ColorRect" parent="."]
offset_top = -12.0
offset_right = 20.0
offset_bottom = -10.0
size_flags_horizontal = 4
color = Color(1, 0, 0, 1)
script = ExtResource("3_5oddd")
metadata/_edit_group_ = true

[node name="RemainingHealth" type="ColorRect" parent="HealthBar"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 2.0
color = Color(0, 1, 0, 1)

[node name="Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_uy5r6")
volume_db = -10.0

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wpeso")
volume_db = -10.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="finished" from="Death" to="." method="_on_death_finished"]
